change code style from K&R style to Allman style