@@ -20,7 +20,6 @@ package com.winterhavenmc.savagegraveyards.commands;
 import com.winterhavenmc.savagegraveyards.PluginMain;
 import com.winterhavenmc.savagegraveyards.messages.MessageId;
 import com.winterhavenmc.savagegraveyards.sounds.SoundId;
-
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
@@ -32,8 +31,8 @@ import java.util.*;
 /**
  * Implements command executor for SavageGraveyards commands.
  */
-public final class CommandManager implements TabExecutor {
-
+public final class CommandManager implements TabExecutor
+{
 	// reference to main class
 	private final PluginMain plugin;
 
@@ -46,8 +45,8 @@ public final class CommandManager implements TabExecutor {
 	 *
 	 * @param plugin reference to main class
 	 */
-	public CommandManager(final PluginMain plugin) {
-
+	public CommandManager(final PluginMain plugin)
+	{
 		// set reference to main class
 		this.plugin = plugin;
 
@@ -55,7 +54,8 @@ public final class CommandManager implements TabExecutor {
 		Objects.requireNonNull(plugin.getCommand("graveyard")).setExecutor(this);
 
 		// register subcommands
-		for (SubcommandType subcommandType : SubcommandType.values()) {
+		for (SubcommandType subcommandType : SubcommandType.values())
+		{
 			subcommandRegistry.register(subcommandType.create(plugin));
 		}
 
@@ -69,16 +69,17 @@ public final class CommandManager implements TabExecutor {
 	 */
 	@Override
 	public List<String> onTabComplete(final @Nonnull CommandSender sender, final @Nonnull Command command,
-	                                  final @Nonnull String alias, final String[] args) {
-
+	                                  final @Nonnull String alias, final String[] args)
+	{
 		// if more than one argument, use tab completer of subcommand
-		if (args.length > 1) {
-
+		if (args.length > 1)
+		{
 			// get subcommand from map
 			Optional<Subcommand> optionalSubcommand = subcommandRegistry.getSubcommand(args[0]);
 
 			// if no subcommand returned from map, return empty list
-			if (optionalSubcommand.isEmpty()) {
+			if (optionalSubcommand.isEmpty())
+			{
 				return Collections.emptyList();
 			}
 
@@ -99,20 +100,22 @@ public final class CommandManager implements TabExecutor {
 	 */
 	@Override
 	public boolean onCommand(final @Nonnull CommandSender sender, final @Nonnull Command command,
-							 final @Nonnull String label, final String[] args) {
-
+	                         final @Nonnull String label, final String[] args)
+	{
 		// convert args array to list
 		List<String> argsList = new ArrayList<>(Arrays.asList(args));
 
 		String subcommandName;
 
 		// get subcommand, remove from front of list
-		if (argsList.size() > 0) {
-			subcommandName = argsList.remove(0);
+		if (!argsList.isEmpty())
+		{
+			subcommandName = argsList.removeFirst();
 		}
 
 		// if no arguments, set command to help
-		else {
+		else
+		{
 			subcommandName = "help";
 		}
 
@@ -120,14 +123,15 @@ public final class CommandManager implements TabExecutor {
 		Optional<Subcommand> optionalSubcommand = subcommandRegistry.getSubcommand(subcommandName);
 
 		// if subcommand is empty, get help command from map
-		if (optionalSubcommand.isEmpty()) {
+		if (optionalSubcommand.isEmpty())
+		{
 			optionalSubcommand = subcommandRegistry.getSubcommand("help");
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_INVALID_COMMAND).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 		}
 
 		// execute subcommand
-		optionalSubcommand.ifPresent( subcommand -> subcommand.onCommand(sender, argsList) );
+		optionalSubcommand.ifPresent(subcommand -> subcommand.onCommand(sender, argsList));
 
 		return true;
 	}
@@ -136,19 +140,22 @@ public final class CommandManager implements TabExecutor {
 	/**
 	 * Get matching list of subcommands for which sender has permission
 	 *
-	 * @param sender the command sender
+	 * @param sender      the command sender
 	 * @param matchString the string prefix to match against command names
 	 * @return List of String - command names that match prefix and sender has permission
 	 */
-	private List<String> matchingCommands(final CommandSender sender, final String matchString) {
-
+	private List<String> matchingCommands(final CommandSender sender, final String matchString)
+	{
 		List<String> returnList = new ArrayList<>();
 
-		for (String subcommandName : subcommandRegistry.getKeys()) {
+		for (String subcommandName : subcommandRegistry.getKeys())
+		{
 			Optional<Subcommand> subcommand = subcommandRegistry.getSubcommand(subcommandName);
-			if (subcommand.isPresent()) {
+			if (subcommand.isPresent())
+			{
 				if (sender.hasPermission(subcommand.get().getPermissionNode())
-						&& subcommandName.startsWith(matchString.toLowerCase())) {
+						&& subcommandName.startsWith(matchString.toLowerCase()))
+				{
 					returnList.add(subcommandName);
 				}
 			}
